# dotfiles

./: .gitignore  Makefile.am  TODO  autogen.sh  configure.ac
bash/: Makefile.am  bash_profile
coreutils/: Makefile.am
emacs/: .gitignore  Makefile.am  init.el  setup.sh
emacs/emacs.d/: .gitignore  init.el
fluxbox/: .gitignore  Makefile.am  apps  init  keys  menu  overlay  setup_style.sh  startup  usermenu
git/: Makefile.am  gitconfig
mail/: Makefile.am  alias.muttrc  fetchmailrc  layout.muttrc  macro.muttrc  mailbox.muttrc  maillist.muttrc  msmtprc  procmailrc  wmbiffrc-novell  wmbiffrc-novell-lists
mail/mutt/: aliases  muttrc
me/: 10local  10shell  20local  20shell  30grails  30groovy  30java  30python  30ruby  30scala  50admin  50ant  50brew  50cloudfoundry  50cloudfoundry_test  50dev  50emacs  50gcc  50gentoo  50git  50javacc  50mail  50maven  50mongodb  50net  50pager  50postgres  50rabbitmq  50ssh  50svn  50task  50tomcat  50vim  50vmware  50web  50x  90local  Makefile.am  aliases  aliases-darwin  (+14 more)
proc/: Makefile.am
repos/: Makefile.am  repo.lst
ruby/: Makefile.am  rvmrc
task/: Makefile.am  taskrc
vim/: Makefile.am  setup  vimrc
vim/UltiSnips/: Makefile.am  java.snippets
vim/after/: Makefile.am
vim/after/ftplugin/: Makefile.am
vim/after/syntax/: Makefile.am
vim/autoload/: Makefile.am
vim/vim/: setup.sh
xorg/: Makefile.am  Xresources  xinitrc
zsh/: Makefile.am  zshrc
