AC_INIT([myenv], [0.0.1])

AC_PREFIX_DEFAULT(${HOME})

AM_INIT_AUTOMAKE([tar-pax])

AC_OUTPUT([
Makefile
bin/Makefile
emacs/Makefile
fluxbox/Makefile
git/Makefile
mail/Makefile
me/Makefile
vim/Makefile
xorg/Makefile
zsh/Makefile
])

cat <<EOM
Configuration:
==============================================================================

    VERSION     = ${VERSION}

    prefix      = ${prefix}

==============================================================================
EOM
